--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,1 +1,16 @@
 /* app global css */
+
+@import "./variables.css";
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  background: var(--q-primary);
+}
+
+.page-my-diary-food {
+  padding: 20px;
+  min-height: 100%;
+}
