--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -1,8 +1,8 @@
 :root {
   /* colors */
   --q-primary: #faf7f4;
-  --q-secondary: #7b7e81;
-  --q-tertiary: #b85981;
+  --q-secondary: #b85981;
+  --q-tertiary: #7b7e81;
   --q-accent: #e04f2e;
   --q-info: #eaac82;
 
