Auth users with check email already exist

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -18,3 +18,7 @@ a {
   text-decoration: none;
   color: var(--q-secondary);
 }
+.banner-error {
+  color: white;
+  background-color: var(--q-negative);
+}
