--- a/src/css/app.css
+++ b/src/css/app.css
@@ -7,7 +7,7 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
-  background: var(--q-primary);
+  background: #f6e7cb;
 }
 a {
   text-decoration: none;
