feature: first steps design card CreateMenu, mobile and desktop 💄 📱

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -38,6 +38,9 @@ a {
 .head-sm {
   font-size: var(--font-head-h3);
 }
+.head-xs {
+  font-size: var(--font-head-h4);
+}
 .page-my-diary-food {
   padding: 20px;
   min-height: 100%;
