style: First steps of pattern background  💄

--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -9,6 +9,7 @@
 
   --brown: #974c00;
   --brown-ligth: #deb599;
+  --brown-ligth-medium: #d17e46;
   --gray: #9d9d9d;
   --gray-ligth: #fcfcfc;
   --orange-light: #fdca8f;
