--- a/src/css/app.css
+++ b/src/css/app.css
@@ -7,7 +7,19 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
-  background: #f6e7cb;
+}
+body::before {
+  content: ""; /* Contenido vacío para que el ::before se visualice */
+  background-image: url("../assets/patternFood.png");
+  background-color: #f6e7cb;
+  background-size: 40%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  opacity: 0.5;
+  z-index: -1; /* Coloca el ::before detrás del contenido del body */
 }
 a {
   text-decoration: none;
@@ -56,4 +68,15 @@ a {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+@media (min-width: 798px) {
+  body::before {
+    background-size: 40%;
+  }
+}
+@media (min-width: 992px) {
+  body::before {
+    background-size: 33%;
+  }
 }
