style: Add new design board Menu card 💄

--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -1,6 +1,7 @@
 :root {
   /* colors */
   --q-primary: #a85690;
+  --q-primary-ligth: #efdbeb;
   --q-secondary: #b37841;
   --q-tertiary: #89b5bf;
   --q-accent: #e04f2e;
