feature: Logic saveMenu for BoardMenu component ✨

--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -1,7 +1,8 @@
 :root {
   /* colors */
   --q-primary: #a85690;
-  --q-primary-ligth: #efdbeb;
+  --q-primary-ligth: #d096c3;
+  --q-primary-extra-ligth: #efdbeb;
   --q-secondary: #b37841;
   --q-tertiary: #89b5bf;
   --q-accent: #e04f2e;
