--- a/src/css/app.css
+++ b/src/css/app.css
@@ -74,6 +74,14 @@ a {
   font-size: var(--font-small);
   color: var(--q-negative);
 }
+.info-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  background-color: white;
+  padding: var(--spacing-md);
+}
 
 @media (min-width: 798px) {
   body::before {
